--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   google_fonts: ^6.2.1
   phosphor_flutter: ^2.1.0
   get: ^4.7.2
+  flutter_map: ^6.2.1
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
