--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_map: ^6.2.1
   latlong2: ^0.9.1
   intl: ^0.18.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
