--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   google_fonts: ^6.2.1
   phosphor_flutter: ^2.1.0
   get: ^4.7.2
+  get_storage: ^2.1.1
   flutter_map: ^6.2.1
   latlong2: ^0.9.1
   intl: ^0.18.1
   image_picker: ^1.1.2
   http: ^1.3.0
-
+  shared_preferences: ^2.2.0
+  logger: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
