--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   intl: ^0.18.1
   image_picker: ^1.1.2
   http: ^1.3.0
-  shared_preferences: ^2.2.0
+  shared_preferences: ^2.2.2
   logger: ^2.0.0
+  mime: ^1.0.4
+  http_parser: ^4.0.2
   
 dev_dependencies:
   flutter_test:
