--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   logger: ^2.0.0
   mime: ^1.0.4
   http_parser: ^4.0.2
+  cached_network_image: ^3.3.0
   
 dev_dependencies:
   flutter_test:
