--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   mime: ^1.0.4
   http_parser: ^4.0.2
   cached_network_image: ^3.3.0
+  geolocator: ^12.0.0
   
 dev_dependencies:
   flutter_test:
