--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,17 @@ dependencies:
   http_parser: ^4.0.2
   cached_network_image: ^3.3.0
   geolocator: ^12.0.0
+  flutter_launcher_icons: ^0.14.4
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
